--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="cont">
                   <h4>Your Order</h4>
-                  <p>Lorem ipsum dolor, sit amet consectetur elit. sit amet consectetur. sit amet consectetur</p>
+                  <p>Add products to your cart. enter your details and confirm.</p>
                 </div>
               </div>
             </div>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="cont">
                   <h4>Picking your order</h4>
-                  <p>Lorem ipsum dolor, sit amet consectetur elit. sit amet consectetur. sit amet consectetur</p>
+                  <p>Your order is being picked and now well be forwarded for packaging</p>
                 </div>
               </div>
             </div>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="cont">
                   <h4>Packing Your Order</h4>
-                  <p>Lorem ipsum dolor, sit amet consectetur elit. sit amet consectetur. sit amet consectetur</p>
+                  <p>We are packing your order and will be out for delivery soon.</p>
                 </div>
               </div>
             </div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="cont">
                   <h4>Deliver</h4>
-                  <p>Lorem ipsum dolor, sit amet consectetur elit. sit amet consectetur. sit amet consectetur</p>
+                  <p>Your order has been prepared and out for delivary it will be delivered soon</p>
                 </div>
               </div>
             </div>
@@ -320,7 +320,7 @@
                     <a href="#!" class="cart">Add To Card</a>
                   </div>
                   <div class="new">
-                    new
+                    New
                   </div>
                 </div>
                 <div class="slider1">
@@ -361,7 +361,7 @@
                     <a href="#!" class="cart">Add To Card</a>
                   </div>
                   <div class="new">
-                    new
+                    New
                   </div>
                 </div>
                 <div class="slider1">
@@ -402,7 +402,7 @@
                     <a href="#!" class="cart">Add To Card</a>
                   </div>
                   <div class="new">
-                    new
+                    New
                   </div>
                 </div>
               </div>
@@ -448,7 +448,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="footer-box company">
                 <h3 class="footer-heading">About Company</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae nemo nostrum magni, dolorem repudiandae autem nesciunt expedita placeat!</p>
+                <p>But must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born</p>
                 <div class="social">
                   <ul>
                     <li>
