--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                   </div>
                   <div class="de">
                     <h4>studio design</h4>
-                    <h3>Originals kaval windbra aslse</h3>
+                    <h3>Brixton Patrol All treeor</h3>
                     <span class="star">
                       <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </span>
@@ -370,7 +370,7 @@
                   </div>
                   <div class="de">
                     <h4>studio design</h4>
-                    <h3>Originals kaval windbra aslse</h3>
+                    <h3>Madden By Steve madden</h3>
                     <span class="star">
                       <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </span>
